fix: Fixed whitespace feat: Added hover to slider

--- a/css/index.scss
+++ b/css/index.scss
@@ -30,8 +30,7 @@ $gray3: #B6BAC6;
   color: $primary;
 }
 
-body, html {
-  height: 100%;
+body {
   background: $white;
 }
 
@@ -591,21 +590,67 @@ header {
     align-items: flex-end;
     position: relative;
 
-    img {
+    .slide {
       width: 270px;
       height: 270px;
       filter: brightness(0.4);
-      transition: filter 0.4s ease-in;
+      cursor: pointer;
+      margin-top: 0;
+      position: relative;
     }
 
-    img.active {
+    .slide.active {
       width: 300px;
       height: 300px;
       filter: none;
+      position: relative;
+      transition: filter 0.8s ease;
+      cursor: pointer;
     }
 
-    img.hidden {
+    .slide.hidden {
       display: none;
+    }
+
+    .slide:hover::after {
+      background: $primary;
+      opacity: 0.7;
+    }
+
+    .slide:hover::before {
+      content: "VIEW CASE STUDY";
+    }
+
+    .slide::after {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      pointer-events: none;
+      transition: 0.5s;
+      content: "";
+    }
+
+    .slide::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $black;
+      font-weight: bold;
+      font-family: 'Tajawal', sans-serif;
+      font-size: 1.875em;
+      pointer-events: none;
+      letter-spacing: -0.03em;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
     }
 
     #slider-previous {
@@ -715,8 +760,8 @@ header {
   }
 
   .industry {
-    margin-top: 5em;
-    margin-bottom: 5em;
+    margin-top: 3em;
+    margin-bottom: 3em;
     width: 100%;
     display: flex;
     align-items: flex-start;
@@ -805,7 +850,7 @@ header {
   }
 
   .industry:last-of-type {
-    margin-bottom: 10em;
+    margin-bottom: 5em;
   }
 }
 
@@ -913,7 +958,7 @@ header {
   }
 
   form {
-    margin-top: 5em;
+    margin-top: 3em;
     width: 1000px;
     height: 900px;
     display: flex;
